--- a/ldp.css
+++ b/ldp.css
@@ -2,6 +2,9 @@ body {
     background-color: #124076;
     background: url('https://t4.ftcdn.net/jpg/05/16/14/17/360_F_516141768_GZFZzSIHdpPirWFKmAOp6Q9F3pFuNJ3P.jpg');
 }
+.news-container {
+    background-color: "white"
+}
 
 header {
     background-color: #97FEED;
